# CMakeProjectTemplates

program/: CMakeLists.txt
program-with-library/: CMakeLists.txt
program-with-library/Program/: CMakeLists.txt
program-with-library/Program/src/: CMakeLists.txt  main.cpp  program.cpp  program.hpp
program-with-library/Program/test/: CMakeLists.txt  program_test.cpp
program-with-library/SomeLibrary/: CMakeLists.txt
program-with-library/SomeLibrary/include/SomeLibrary/: my_function.hpp
program-with-library/SomeLibrary/src/: CMakeLists.txt  my_function.cpp
program-with-library/SomeLibrary/test/: CMakeLists.txt  library_test.cpp
program/src/: CMakeLists.txt  main.cpp  program.cpp  program.hpp
program/test/: CMakeLists.txt  program_test.cpp
